...
    // MARK: - Lifecycle
    override func viewDidLoad() {
        super.viewDidLoad()
        imageView.layer.cornerRadius = 20
        presenter = MovieQuizPresenter(viewController: self)
        presenter.startGame()
        counterLabel.accessibilityIdentifier = "Index"
    }
    
    // MARK: - QuestionFactoryDelegate
    
    @IBOutlet private var imageView: UIImageView!
    @IBOutlet private var textLabel: UILabel!
...
